Make linker warnings non-fatal to avoid errors when linking with ld from binutils 2.22.  It's not clear to me why we don't get errors during cross build with the normal linker.

--- a/gnu/lib/libssp/Makefile
+++ b/gnu/lib/libssp/Makefile
@@ -36,3 +36,6 @@ ssp.h: ssp.h.in
 SUBDIR+= libssp_nonshared
 
 .include <bsd.lib.mk>
+
+# Code users gets() so don't let linker warnings be fatal.
+SOLINKOPTS+=	-Wl,--no-fatal-warnings
