Introduce a new variable, TCPATH which overrides other path elements during a full world build.  This allows portions of the toolchain to be replaced with external components.  It has been tested with cc, c++, nm, and ld replaced.  TCPATH is used by installed the tools you with to use under their common names and then building world with a command like:
	make TCPATH=/tmp/tc buildworld

TCPATH support depends on the ability to call cc/c++ with --sysroot
which in turn requires that the linker the compiler users (hard
coded at compile time) also support --sysroot.  In the case of GNU
ld this is non-default.  You can produce a linker that works exactly
like normal but also supports --sysroot by building binutils with
the configure argument "--with-sysroot=/".

The current patch is quite inefficient.   It still builds all crossbuild
tools including copies of gcc and clang.  A more efficient and selective
approach is certainly possible.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -180,7 +180,11 @@ WORLDTMP=	${OBJTREE}${.CURDIR}/tmp
 BPATH=		${WORLDTMP}/legacy/usr/sbin:${WORLDTMP}/legacy/usr/bin:${WORLDTMP}/legacy/usr/games
 XPATH=		${WORLDTMP}/usr/sbin:${WORLDTMP}/usr/bin:${WORLDTMP}/usr/games
 STRICTTMPPATH=	${BPATH}:${XPATH}
+.if defined(TCPATH)
+TMPPATH=	${TCPATH}:${STRICTTMPPATH}:${PATH}
+.else
 TMPPATH=	${STRICTTMPPATH}:${PATH}
+.endif
 
 #
 # Avoid running mktemp(1) unless actually needed.
@@ -272,6 +276,9 @@ WMAKEENV=	${CROSSENV} \
 WMAKEENV+=	NO_CTF=1
 .endif
 WMAKE=		${WMAKEENV} ${MAKE} -f Makefile.inc1 DESTDIR=${WORLDTMP}
+.if defined(TCPATH)
+WMAKE+=		SYSROOT=${WORLDTMP}
+.endif
 
 .if ${TARGET_ARCH} == "amd64" || ${TARGET_ARCH} == "powerpc64"
 # 32 bit world
