--- a/lib/libc/regex/Makefile.inc
+++ b/lib/libc/regex/Makefile.inc
@@ -5,10 +5,10 @@
 
 CFLAGS+=-DHAVE_CONFIG_H -DTRE_LIBC_BUILD -I${.CURDIR}/../../contrib/tre
 
-SRCS+=	hashtable.c regcomp.c regerror.c regexec.c tre-ast.c \
-	tre-compile.c tre-fastmatch.c tre-heuristic.c tre-match-approx.c \
-	tre-match-backtrack.c tre-match-parallel.c tre-mem.c tre-parse.c \
-	tre-stack.c xmalloc.c
+SRCS+=	hashtable.c mregcomp.c mregexec.c regcomp.c regerror.c regexec.c \
+	tre-ast.c tre-compile.c tre-fastmatch.c tre-heuristic.c \
+	tre-match-approx.c tre-match-backtrack.c tre-match-parallel.c \
+	tre-mfastmatch.c tre-mem.c tre-parse.c tre-stack.c xmalloc.c
 
 MAN+=	regex.3 re_format.7
 
