--- a/lib/libc/regex/Makefile.inc
+++ b/lib/libc/regex/Makefile.inc
@@ -5,8 +5,8 @@
 
 CFLAGS+=-DHAVE_CONFIG_H -DTRE_LIBC_BUILD -I${.CURDIR}/../../contrib/tre
 
-SRCS+=	hashtable.c mregcomp.c mregexec.c regcomp.c regerror.c regexec.c \
-	tre-ast.c tre-compile.c tre-fastmatch.c tre-heuristic.c \
+SRCS+=	hashtable.c mregcomp.c mregerror.c mregexec.c regcomp.c regerror.c \
+	regexec.c tre-ast.c tre-compile.c tre-fastmatch.c tre-heuristic.c \
 	tre-match-approx.c tre-match-backtrack.c tre-match-parallel.c \
 	tre-mfastmatch.c tre-mem.c tre-parse.c tre-stack.c xmalloc.c
 
