--- a/admin/conf/admin.conf
+++ b/admin/conf/admin.conf
@@ -13,6 +13,8 @@
 # top-level package building things
 #
 
+SUPPORTED_ARCHS="amd64 arm i386 ia64 mips powerpc sparc64"
+
 SRC_BRANCHES="7 8 9 10"
 SRC_BRANCHES_PATTERN="^[0-9]"
 SRC_BRANCH_7_SUBDIR=releng/7.4/
