--- a/admin/conf/apache.conf
+++ b/admin/conf/apache.conf
@@ -1,4 +1,4 @@
-DocumentRoot "/var/portbuild/www"
+DocumentRoot "/a/portbuild/admin/www"
 
 # filter magic to decompress bzip2 logs  - pav@
 LoadModule ext_filter_module libexec/apache22/mod_ext_filter.so
