Continue to hunt down hardcoded /var instances.

--- a/admin/conf/apache.conf
+++ b/admin/conf/apache.conf
@@ -4,7 +4,7 @@ DocumentRoot "/a/portbuild/admin/www"
 LoadModule ext_filter_module libexec/apache22/mod_ext_filter.so
 ExtFilterDefine BUNZIP2 mode=output intype=application/x-bzip2 outtype=text/plain cmd=/usr/bin/bunzip2
 
-<Directory /var/portbuild/www>
+<Directory /a/portbuild/www>
     Order allow,deny
     Allow from all
     Options FollowSymLinks
@@ -12,9 +12,9 @@ ExtFilterDefine BUNZIP2 mode=output intype=application/x-bzip2 outtype=text/plai
     #Redirect permanent /index.html http://pointyhat.freebsd.org/errorlogs/
 </Directory>
 
-Alias /errorlogs/ /var/portbuild/errorlogs/
+Alias /errorlogs/ /a/portbuild/errorlogs/
      
-<Directory /var/portbuild/errorlogs>
+<Directory /a/portbuild/errorlogs>
     Order allow,deny
     Allow from all
     Options FollowSymLinks Indexes
@@ -42,7 +42,7 @@ Alias /ganglia/ "/usr/local/www/ganglia/"
 </Directory>
 
 # sometimes useful as a playpen
-#<Directory /var/portbuild/www/studies>
+#<Directory /a/portbuild/www/studies>
 #    Order allow,deny
 #    Allow from all
 #    Options Indexes FollowSymlinks MultiViews
