--- a/sys/boot/i386/efi/Makefile
+++ b/sys/boot/i386/efi/Makefile
@@ -11,7 +11,7 @@ INTERNALPROG=
 
 # architecture-specific loader code
 SRCS=	main.c conf.c vers.c reloc.c elf64_freebsd.c
-SRCS+=	x86_efi_copy.c bootinfo.c bootinfo64.c autoload.c devicename.c efimd.c
+SRCS+=	copy.c bootinfo.c bootinfo64.c autoload.c devicename.c efimd.c
 SRCS+=	efifb.c amd64_tramp.S start.S
 
 CFLAGS+=	-fPIC
