Update this to compile with the libradarpkt changes.

--- a/src/pktlog/Makefile
+++ b/src/pktlog/Makefile
@@ -6,7 +6,7 @@ X_LIBS=	-L../../lib/libradarpkt/
 SRCS=	main.c
 CFLAGS+=	-I/home/adrian/work/freebsd/ath/head/src/sys $(X_INCS) -g -ggdb \
 	-DATH_ENABLE_RADIOTAP_VENDOR_EXT
-LDADD+=	$(X_LIBS) -lpcap -lradarpkt
+LDADD+=	$(X_LIBS) -lpcap -lradarpkt -lm
 
 NO_MAN=	1
 
