Switch all branches to the single-source model. Remove 9.1 from the FreeBSD 9 lineup. Add 8.4 to the FreeBSD 8 lineup. Retire FreeBSD 4, 5 and 6.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -2,14 +2,9 @@
 
 ETCFILES	 =
 ETCFILES	+= default.rc
-ETCFILES	+= releng_4.rc update_releng_4.rc
-ETCFILES	+= releng_5.rc update_releng_5.rc
-ETCFILES	+= releng_6.rc update_releng_6.rc
-ETCFILES	+= releng_7.rc update_releng_7.rc
-ETCFILES	+= releng_8.rc update_releng_8.rc
-ETCFILES	+= releng_9.rc update_releng_9.rc
-ETCFILES	+= head.rc update_head.rc
-ETCFILES	+= head-ss-update.rc head-ss-build.rc
+ETCFILES	+= head-update.rc head-build.rc
+ETCFILES	+= freebsd8-update.rc freebsd8-build.rc
+ETCFILES	+= freebsd9-update.rc freebsd9-build.rc
 ETCDIR		?= ${HOME}/etc
 ETCOWN		?= ${USER}
 ETCGRP		?= ${USER}
